Created the methods required to update and save an existing ingredient. Also created the tests to test the methods. All currently pass. Closes #24